<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_aruco_ros</name>
  <version>1.0.0</version>
  <description>Aruco Detection</description>
  <maintainer email="sebdeveloper6952@gmail.com">dev</maintainer>
  <license>Apache-2.0</license>
    
  <depend>sensor_msgs</depend> 
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>opencv_aruco_ros_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
